// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridDataEntryHelper<> should editHandler 1`] = `
{
  "id": "🐂🤏",
  "test": "👍",
}
`;

exports[`GridDataEntryHelper<> should handle add 1`] = `
[
  {
    "id": "💩",
  },
  {
    "id": "🐂",
  },
  {
    "id": "🥜",
  },
  {
    "id": "🐂",
  },
]
`;

exports[`GridDataEntryHelper<> should handle remove 1`] = `
[
  {
    "id": "💩",
  },
  {
    "id": "🐂",
  },
]
`;

exports[`GridDataEntryHelper<> should handle saving edited records  1`] = `
[
  {
    "id": "💩",
  },
  {
    "id": "🐂🤏",
    "test": "👍",
    "value": 123,
  },
  {
    "id": "🥜",
  },
]
`;

exports[`GridDataEntryHelper<> should handle saving new records  1`] = `
[
  {
    "id": "💩",
    "test": "i",
  },
  {
    "id": "🐂",
  },
  {
    "id": "🥜",
  },
  {
    "id": undefined,
    "test": "👍",
  },
]
`;

exports[`GridDataEntryHelper<> should handle sorting: asc 1`] = `
[
  {
    "id": "A",
  },
  {
    "id": "B",
  },
  {
    "id": "C",
  },
]
`;

exports[`GridDataEntryHelper<> should handle sorting: desc 1`] = `
[
  {
    "id": "C",
  },
  {
    "id": "B",
  },
  {
    "id": "A",
  },
]
`;

exports[`GridDataEntryHelper<> should removeHandler 1`] = `
[
  {
    "id": "💩",
  },
  {
    "id": "🐂",
  },
]
`;
